--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@ pageTracker._trackPageview();
   <div id="content">
     <h2>Conference and Journal Papers</h2>
     <ul class="pub">
+    <ul class="pub">
+      <li>
+        <img src="p/gestureon.png" width="120" alt="chi2015"/>
+        <span><strong>Lu H.</strong>, Li Y. Gesture On: Always-On Touch Gestures for Fast Mobile Access from Device Standby Mode. <i>CHI 2015</i>
+        </span>
+      </li>
       <li>
         <img src="p/touch.png" width="120" alt="tochi2014"/>
         <span>Li Y., <strong>Lu H.</strong> and Zhang H. Optimistic Programming
