--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ pageTracker._trackPageview();
       <li>
         <img src="p/gestureon.png" width="120" alt="chi2015"/>
         <span><strong>Lu H.</strong>, Li Y. Gesture On: Always-On Touch Gestures for Fast Mobile Access from Device Standby Mode. <i>CHI 2015</i>
-        </span>
+        (<a href="https://dl.acm.org/citation.cfm?id=2702610&coll=DL&dl=GUIDE&CFID=458075553&CFTOKEN=14867211">pdf</a>)</span>
       </li>
       <li>
         <img src="p/touch.png" width="120" alt="tochi2014"/>
